--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,7 +34,7 @@ set -g @plugin 'catppuccin/tmux#v2.1.3'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
-set -g @resurrect-processes 'ssh btop opencode lazygit lazydocker'
+set -g @resurrect-processes 'ssh btop opencode lazygit lazydocker yazi'
 set -g @continuum-restore 'on'
 
 set -g @catppuccin_flavor 'mocha'
