--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -1,7 +1,8 @@
 $terminal = kitty
 $fileManager = thunar
 $menu = rofi
-$browser = app.zen_browser.zen
+# $browser = app.zen_browser.zen
+$browser = org.mozilla.firefox
 $obsidian = md.obsidian.Obsidian
 $protonVPN = com.protonvpn.www
 $protonPass = me.proton.Pass
@@ -20,7 +21,8 @@ bind = $mainMod, Space, exec, $menu -show drun -show-icons
 bind = $mainMod, P, exec, $focus_or_launch "Proton Pass" $protonPass
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, L, exec, hyprlock
-bind = $mainMod, B, exec, $focus_or_launch $browser $browser
+# bind = $mainMod, B, exec, $focus_or_launch $browser $browser
+bind = $mainMod, B, exec, $browser
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, V, exec, cliphist list | $menu -dmenu -display-columns 2 | cliphist decode | wl-copy
 bind = $mainMod, Escape, exec, $terminal -e btop
