--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -4,6 +4,9 @@ windowrule = nofocus, class:^$, title:^$, xwayland:1, floating:1, fullscreen:0, 
 # idk why the fuck the class name keeps changing
 $zen1 = class:app.zen_browser.zen, initialTitle:Picture-in-Picture
 $zen2 = class:zen, initialTitle:Picture-in-Picture
+
+$firefox = class:org.mozilla.firefox, initialTitle:Incrustation vidéo
+
 windowrule = float, $zen1
 windowrule = pin, $zen1
 windowrule = size 25% 25%, $zen1
@@ -18,6 +21,14 @@ windowrule = move 100%-w-15, $zen2
 windowrule = noinitialfocus, $zen2
 windowrule = noborder, $zen2
 windowrule = noshadow, $zen2
+
+windowrule = float, $firefox
+windowrule = pin, $firefox
+windowrule = size 25% 25%, $firefox
+windowrule = move 100%-w-15, $firefox
+windowrule = noinitialfocus, $firefox
+windowrule = noborder, $firefox
+windowrule = noshadow, $firefox
 
 windowrule = float, class:waypaper
 windowrule = size 30% 80%, class:waypaper
