--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,26 +1,5 @@
-keybind = alt+1=unbind
-keybind = alt+2=unbind
-keybind = alt+3=unbind
-keybind = alt+4=unbind
-keybind = alt+5=unbind
-keybind = alt+6=unbind
-keybind = alt+7=unbind
-keybind = alt+8=unbind
-keybind = alt+digit_1=unbind
-keybind = alt+digit_2=unbind
-keybind = alt+digit_3=unbind
-keybind = alt+digit_4=unbind
-keybind = alt+digit_5=unbind
-keybind = alt+digit_6=unbind
-keybind = alt+digit_7=unbind
-keybind = alt+digit_8=unbind
-keybind = alt+é=esc:é
-keybind = alt+è=esc:è
-keybind = alt+ç=esc:ç
-keybind = alt+à=esc:à
+keybind = alt+digit_2=esc:2
 app-notifications = no-clipboard-copy
 confirm-close-surface = false
-theme = dark:cyberdream,light:cyberdream-light
-background-opacity = 0.8
-background-blur = true
+theme = Catppuccin Mocha
 async-backend = epoll
