--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,8 +4,8 @@ set -g pane-base-index 1
 setw -g mode-keys vi
 set -g mouse 1
 set -g renumber-windows on
-set -g repeat-time 600
-set -s escape-time 100
+# set -g repeat-time 600
+set -s escape-time 0
 
 set-option -g set-clipboard on
 
