--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,7 @@ set -g mouse 1
 set -g renumber-windows on
 # set -g repeat-time 600
 set -s escape-time 0
+set -s extended-keys on
 
 set-option -g set-clipboard on
 
