--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -20,11 +20,11 @@ bind = $mainMod, B, exec, $focus_or_launch zen $browser
 bind = $mainMod, F, fullscreen,
 bind = $mainMod SHIFT, P, pin,
 bind = $mainMod, V, exec, cliphist list | $menu -dmenu -display-columns 2 | cliphist decode | wl-copy
+bind = $mainMod, semicolon, exec, $menu -modi emoji -show emoji -emoji-mode copy
 bind = $mainMod, Escape, exec, $terminal -e btop
 bind = $mainMod, W, exec, pkill waypaper || waypaper
 bind = $mainMod, A, exec, pkill pavucontrol || pavucontrol --tab 3
 bind = $mainMod SHIFT, V, exec, $focus_or_launch protonvpn-app com.protonvpn.www
-bind = $mainMod, semicolon, exec, $menu -modi emoji -show emoji
 bind = $mainMod, O, exec, $focus_or_launch obsidian obsidian
 bind = $mainMod, S, exec, $focus_or_launch spotify spotify
 
