--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -24,7 +24,7 @@ bind = $mainMod, semicolon, exec, $menu -modi emoji -show emoji -emoji-mode copy
 bind = $mainMod, Escape, exec, $terminal -e btop
 bind = $mainMod, W, exec, pkill waypaper || waypaper
 bind = $mainMod, A, exec, pkill pavucontrol || pavucontrol --tab 3
-bind = $mainMod SHIFT, V, exec, $focus_or_launch protonvpn-app com.protonvpn.www
+bind = $mainMod SHIFT, V, exec, $focus_or_launch protonvpn-app protonvpn-app
 bind = $mainMod, O, exec, $focus_or_launch obsidian obsidian
 bind = $mainMod, S, exec, $focus_or_launch spotify spotify
 
