--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -51,6 +51,6 @@ windowrule {
     name = ProtonVPN
     match:class = protonvpn-app
 
-    size = (monitor_w*0.1) (monitor_h*0.8)
+    # size = (monitor_w*0.1) (monitor_h*0.8)
     center = on
 }
